<resources>
    <string name="app_name">PestNet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PestNet 50 - Pest Classification</string>
    <string name="nav_header_subtitle">uit.pestnet@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_title">LOGIN</string>
    <string name="username_hint">Please enter username…</string>
    <string name="password_hint">Please enter password…</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_others">Continue with Others</string>
    <string name="terms_and_privacy">Terms and Privacy</string>
    <string name="copyright">2025©Copyright</string>
    <string name="or">or</string>
    <string name="dontHaveAnAccountPleaseSignup">Don\'t have an account? Please signup</string>
    <string name="signup_title">SIGN UP</string>
    <string name="email">Email</string>
    <string name="email_hint">Please enter your email</string>
    <string name="confirm_password_hint">Confirm your password</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="open_camera">Open Camera</string>
    <string name="toggle_flash">Toggle flash</string>
    <string name="take_picture">Take picture</string>
    <string name="apply_edit">Apply Edit</string>
    <string name="save_image">Save Image</string>
    <string name="image_preview">Image Preview</string>
    <string name="dynamic_duo">Dynamic Duo</string>
    <string name="result_will_appear_here">Result will appear here</string>
    <string name="no_images_found">No images found</string>
    <string name="take_photo">Take Photo</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="pest_occurrences">Pest Occurrences: %d</string>
    <string name="general_settings">General Settings</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="receive_notifications">Receive notifications from the app</string>
    <string name="app_language">App Language</string>
    <string name="set_language">Set the language of the app</string>
    <string-array name="language_entries">
        <item>English</item>
        <item>Tiếng Việt</item>
        <item>中文</item>
        <item>Россия</item>
    </string-array>
    <string-array name="language_values">
        <item>en</item>
        <item>vi</item>
        <item>zh</item>
        <item>ru</item>
    </string-array>
    <string name="about_us">About Us</string>
    <string name="about_app_title">About Pest Classification App</string>
    <string name="about_app_summary">Version: 1.0\nCompany: XYZ Corp\nDeveloped by: Your Name</string>
    <string name="about_us_n_napp_version_1_0_ncompany_xyz_corp_ndeveloped_by_your_name">About Us\n\nApp Version: 1.0\nCompany: XYZ Corp\nDeveloped by: Your Name</string>
    <string name="app_theme">Theme</string>
    <string name="set_theme">Choose app theme</string>
    <string name="appearance_settings">Appearance</string>
    <string name="theme_title">Theme</string>
    <string name="theme_summary">Set the app theme</string>
    <string name="most_detected_pests">Most Detected Pests</string>
    <string name="view_all">View All</string>
    <string name="scan">Scan</string>
    <string name="recent_scans">Recent Scans</string>
    <string name="search_for_pests">Search for pests...</string>
    <string name="best_accuracy_results">Best Accuracy Results</string>
    <string name="share">Share</string>
    <string name="save_report">Save Report</string>
    <string name="failed_to_load_pest_data">Failed to load pest data</string>
    <string name="loading_details">Loading details...</string>
    <string name="may_11_2024">May 11, 2024</string>
    <string name="image_information">Image Information</string>
    <string name="also_detected">Also Detected</string>
    <string name="treatment_options">Treatment Options</string>
    <string name="_5_occurrences">5 occurrences</string>
    <string name="spodoptera_frugiperda">Spodoptera frugiperda</string>
    <string name="this_pest_feeds_on_various_crops_including_corn_cotton_and_vegetables_it_can_cause_severe_damage_by_defoliating_plants_and_burrowing_into_fruit">This pest feeds on various crops including corn, cotton, and vegetables. It can cause severe damage by defoliating plants and burrowing into fruit.</string>
    <string name="armyworm">Armyworm</string>
    <string name="_98_confidence">98% Confidence</string>
    <string name="pest_detection_details">Pest Detection Details</string>
    <string name="close">Close</string>
    <string name="close_camera">Close camera</string>
    <string name="camera_settings">Camera settings</string>
    <string name="flip_camera">Flip camera</string>
    <string name="detected_pest">Detected Pest:</string>
    <string name="description">Description:</string>
    <string name="new_scan">New Scan</string>
    <string name="save_result">Save Result</string>
    <string name="search_pests">Search pests...</string>
    <string name="similar_pests">Similar Pests</string>
    <string name="recommended_insecticides">Recommended Insecticides</string>
    <string name="learn_more">Learn more</string>
    <string name="detected_pest_image">Detected Pest Image</string>
    <string name="home">Home</string>
    <string name="gallery">Gallery</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="choose_from_device_gallery">Choose from Device Gallery</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="scientific_name_unavailable">Scientific name unavailable</string>
    <string name="description_unavailable">No description available</string>
    <string name="date_unavailable">Date unavailable</string>
    <string name="filename_unavailable">Unknown file</string>
    <string name="pest_image">Pest image</string>
    <string name="occurrences_count">Occurrences: %d%%</string>
    <string name="actions">Actions</string>
    <string name="remove_result">Remove result</string>
    <string name="confidence_90">Confidence: 90%</string>
    <string name="image_description">Image Description</string>
    <string name="classified_image">Classified image</string>
    <string name="pests">Pests</string>
    <string name="a_major_rice_pest_that_causes_significant_damage_by_folding_and_feeding_on_rice_leaves_leading_to_reduced_photosynthesis_and_yield_loss">A major rice pest that causes significant damage by folding and feeding on rice leaves, leading to reduced photosynthesis and yield loss.</string>
    <string name="biological_characteristics">🔬 Biological Characteristics</string>
    <string name="regions_affected">📍 Regions Affected</string>
    <string name="view_on_inaturalist">View on iNaturalist</string>
    <string name="login_successful">Login Successful!</string>
    <string name="signup_successful">Signup Successful!</string>
    <string name="related_pest_image">Related pest image</string>
    <string name="cnaphalocrocis_medinalis">Cnaphalocrocis medinalis</string>
    <string name="rice_leaf_roller">Rice Leaf-Roller</string>
    <string name="inaturalist">iNaturalist</string>
    <string name="uit_pest_classification">UIT Pest Classification</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="app_logo">App logo</string>
    <string name="confidence_percentage">%d%% Confidence</string>
    <string name="unknown_pest">Unknown Pest</string>
    <string name="no_treatment_info">No treatment information available</string>
    <string name="no_url_available">No additional information URL available</string>
    <string name="no_browser_available">No browser app available</string>
    <string name="error_opening_url">Error opening URL</string>
    <string name="pest_identification_result">Pest Identification Result</string>
    <string name="error_sharing">Error sharing result</string>
    <string name="insecticide_icon">Insecticide icon</string>
    <string name="share_header">🔍 Pest Identification Result</string>
    <string name="pest_name">Pest</string>
    <string name="scientific_name">Scientific Name</string>
    <string name="confidence">Confidence</string>
    <string name="detected_on">Detected On</string>
    <string name="regions">Regions</string>
    <string name="app_signature">Shared via Pest Detection App</string>
    <string name="share_results">Share Results</string>
    <string name="forgot_password_title">Reset Password</string>
    <string name="forgot_password_subtitle">Enter your email address and we\'ll send you a link to reset your password</string>
    <string name="send_reset_email">Send Reset Email</string>
    <string name="contact_support">Contact Support</string>
    <string name="remember_password">Remember your password?</string>
    <string name="back_to_login">Sign In</string>
    <string name="back">Back</string>
    <string name="reset_email_sent">Reset email sent successfully! Please check your inbox.</string>
    <string name="reset_email_error">Failed to send reset email. Please try again.</string>
    <string name="report">Report</string>
    <string name="reset_email_sent_success">Eamil sent successfully!</string>
    <string name="report_issue">Report issue</string>
    <string name="no_scientific_name_available">No scientific name available</string>
    <string name="chip_background">Chip Background</string>
    <string name="chip_text">Chip Text</string>
    <string name="scientific_name_not_available">Scientific name not available</string>
    <string name="no_description_available">No description available</string>
    <string name="unknown_risk">UNKNOWN RISK</string>
    <string name="no_regions_specified">No regions specified</string>
    <string name="no_biological_characteristics_available">No biological characteristics available</string>
    <string name="no_control_methods_available">No control methods available</string>
    <string name="no_insecticides_specified">No insecticides specified</string>
    <string name="unknown">Unknown</string>
    <string name="risk_high">High Risk</string>
    <string name="risk_medium">Medium Risk</string>
    <string name="risk_low">Low Risk</string>
    <string name="primary_dark">Primary Dark</string>
    <string name="insecticide_background">Insecticide Background</string>
    <string name="regionsText">Regions</string>
    <string name="btnClose">Close</string>
    <string name="btnViewOnINaturalist">View on iNaturalist</string>
    <string name="btnShare">Share</string>
    <string name="btnReportSighting">Report Sighting</string>
    <string name="btnGetHelp">Get Help</string>
    <string name="cannot_open_image">Cannot open image</string>
    <string name="no_browser_available_inaturalist">No browser available to open iNaturalist</string>
</resources>