<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- General Settings -->
    <PreferenceCategory
        android:title="@string/general_settings">

        <CheckBoxPreference
            android:key="notifications"
            android:title="@string/enable_notifications"
            android:summary="@string/receive_notifications"
            android:defaultValue="true" />

        <PreferenceCategory android:title="@string/appearance_settings">
            <ListPreference
                android:defaultValue="system"
                android:entries="@array/theme_entries"
                android:entryValues="@array/theme_values"
                android:key="theme"
                android:summary="@string/theme_summary"
                android:title="@string/theme_title" />
        </PreferenceCategory>

        <ListPreference
            android:key="language"
            android:title="@string/app_language"
            android:summary="@string/set_language"
            android:defaultValue="en"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:iconSpaceReserved="false" />

    </PreferenceCategory>

    <!-- About Us Section -->
    <PreferenceCategory
        android:title="@string/about_us">
        <Preference
            android:key="about_us"
            android:title="@string/about_app_title"
            android:summary="@string/about_app_summary"
            android:enabled="false" />
    </PreferenceCategory>

</PreferenceScreen>